MDEV-11444 Server crashes in String::ptr / Item_func_json_depth::val_int.

CAST AS JSON didn't set the null_value mark properly.